--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,7 +16,11 @@ tauri-build = { version = "1.2", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2", features = ["macos-private-api", "shell-open", "system-tray"] }
+tauri = { version = "1.2", features = [
+  "macos-private-api",
+  "shell-open",
+  "system-tray",
+] }
 tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }
 cocoa = "0.24.1"
 window-vibrancy = "0.3.2"
