--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,11 +16,7 @@ tauri-build = { version = "1.2", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2", features = [
-  "macos-private-api",
-  "shell-open",
-  "system-tray",
-] }
+tauri = { version = "1.2", features = ["macos-private-api", "shell-open", "system-tray"] }
 tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }
 cocoa = "0.24.1"
 window-vibrancy = "0.3.2"
@@ -29,6 +25,8 @@ objc = "0.2.7"
 rspotify = { version = "0.11.6", features = ["env-file", "cli"] }
 env_logger = "0.10.0"
 webbrowser = "0.8.2"
+tauri-plugin-store = { path = "../tauri-plugin-store" }
+chrono = "0.4.23"
 
 [features]
 # by default Tauri runs in production mode
