--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "spotify-mini-player",
+  "name": "todo_list",
+  "license": "UNLICENSED",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,20 +12,25 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.2.0",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.20"
+    "@tauri-apps/api": "^1.1.0",
+    "async-mutex": "^0.4.0",
+    "dragula": "^3.7.3"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^2.0.0",
-    "@tauri-apps/cli": "^1.2.2",
+    "@sveltejs/vite-plugin-svelte": "^1.0.1",
+    "@tauri-apps/cli": "^1.1.0",
     "@tsconfig/svelte": "^3.0.0",
+    "@types/dragula": "^3.7.1",
     "@types/node": "^18.7.10",
+    "autoprefixer": "^10.4.12",
     "phosphor-svelte": "^1.2.1",
-    "svelte": "^3.54.0",
-    "svelte-check": "^2.10.0",
-    "tslib": "^2.4.1",
+    "postcss": "^8.4.17",
+    "svelte": "^3.49.0",
+    "svelte-check": "^2.8.0",
+    "svelte-preprocess": "^4.10.7",
+    "tailwindcss": "^3.1.8",
+    "tslib": "^2.4.0",
     "typescript": "^4.6.4",
-    "vite": "^4.0.0"
+    "vite": "^3.0.2"
   }
 }
